# fastapi_playground

./: ATAL.xlsx  import_db.py  output.txt  pyproject.toml  response.html
 keycloak_import/: excel_schema.py  internal_schema.py  keycloak_schema.py  main.py  testing1.py  testing2.py  testing3.py  testing4.py  testing5.py  testing6.py
BMS_service/: EBO_test.py  G3_test.py
Dashboard_export/: Dockerfile  export.py  import_dashboard.py  main.py  pyproject.toml  testing_export.py  testing_import.py
bms-data-service/: data_import.py  point.json  point_import.py  producer.py  producer_old_data.py
dashboard_docker_compose/: docker-compose.yml
demo_service/: main.py  test-authz-config.json
iot-gateway/: docker-compose.yml
iot-gateway-web/: Dockerfile  pyproject.toml
iot-gateway-web/src/: main.py  poc.py
kafka/: consumer.py  import requests.py  producer copy.py  sql.py
mocking_bms_data/: bms_mocked_data_for_lg3_opt.json  create_point.py  insert_point_value.py  points.json  testing_insert.py  websocket.py
mqtt_tseting/: aiomqtt.py  applcaition4 copy.py  applcaition4.py  downlink_testing.py  main.py  sendmqtt.py
normal_testing/: 1.sh  Thingsboard_payload_sim.py  batch_del.py  bool.py  class_variable_testing.py  id_gen.py  liveframe_poc.py  string_converter.py  tesing7.py  tesitng6.py  tesitng8.py  testing.py  testing2.py  testing3.py  testing4.py  testing5.py  testing9.py  weather_service_poc.py
password_gen/: main.py  tfvar.txt
remove_ns/: rm.sh
test_service/: keycloak_schema.py  main.py
text_edit/: asdffasd.ini  asdffasd.json  asdfs.json  bacnet.json  (+7 more)
(+82 files in other folders)
