[tool.poetry]
name = "fastapi_playground"
version = "0.1.0"
description = ""
authors = ["Leung Wai Lun <williamleung@atal.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
fastapi = "^0.85.0"
loguru = "^0.6.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pendulum = "^2.1.2"
aiohttp = "^3.8.3"
requests = "^2.28.1"
python-multipart = "^0.0.5"
python-keycloak = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pylint = "^2.15.3"
mypy = "^0.981"
autoflake = "^1.6.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
