[tool.poetry]
name = "iot-gateway-web"
version = "0.1.0"
description = ""
authors = ["Leung Wai Lun <williamleung@atal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
fastapi = {extras = ["all"], version = "^0.88.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"